# sportstathub

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  PRODUCT.md  docker-compose.ollama.yml  docker-compose.prod.yml  patch.js  set-github-secrets.sh
ai-service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.sh
ai-service/app/: __init__.py  main.py  schemas.py
ai-service/app/services/: __init__.py  prediction_service.py
ai-service/tests/: test_api.py  test_prediction_service.py
oddswitch/: .dockerignore  .gitignore  Docker_setup.txt  Dockerfile.api  Dockerfile.browser  Dockerfile.worker  INTEGRATION_GUIDE.md  MAP.md  PRODUCTION.md  alembic.ini  docker-compose.yml  future_improvements.txt  pyproject.toml  run.sh  test_b9_api_gen.py  walkthrough.md
oddswitch/alembic/: env.py
oddswitch/alembic/versions/: 001_initial_schema.py  002_tenant_security.py
oddswitch/app/: __init__.py  config.py  dependencies.py  main.py
oddswitch/app/api/v1/: router.py  schemas.py  translate.py
oddswitch/app/browser/: manager.py  proxy.py  stealth.py
oddswitch/app/browser/adapters/: __init__.py  (+3 more)
oddswitch/app/cache/: redis_client.py
oddswitch/app/core/: callback_security.py  exceptions.py  rate_limit.py  redaction.py  security.py
oddswitch/app/db/: engine.py  models.py  repository.py
oddswitch/app/observability/: logging.py  metrics.py
oddswitch/app/queue/: celery_app.py  tasks.py
oddswitch/app/schemas/: canonical.py  enums.py
oddswitch/app/workers/: confidence.py  matcher.py  normalizer.py  notifier.py  pipeline.py  rehydrator.py  resolver.py  translator.py
oddswitch/requirements/: api.txt  base.txt  browser.txt  dev.txt
oddswitch/scripts/: convert.py  research_sportybet_api.py  research_sportybet_api_direct.py  research_sportybet_book.py  research_sportybet_search.py  seed_mappings.py  test_adapters_live.py  test_bet9ja_extract.py  test_bet9ja_extract_v2.py  test_bet9ja_final.py  test_bet9ja_scan.py  test_bet9ja_scan2.py  test_bet9ja_strategies.py  test_conversion_pipeline.py  test_reverse_pipeline.py  test_sportybet_share_create.py
oddswitch/tests/: conftest.py  test_api.py  test_cache.py  test_callback_security.py  test_pipeline.py  test_workers.py
(+270 files in other folders)
