[project]
name = "multisport-ai-service"
version = "0.1.0"
description = "Isolated FastAPI prediction service for the MultiSport Predictions Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
